1998-06-09  Mike Sutton@SAIC

	Make it compile with Sun's bundled K&R C compiler:
	* rcs.c (count_delta_actions): Change to static to match
	declaration.
	* client.c (handle_wrapper_rcs_option): Rename error label to
	handle_error to avoid clash with function name.

1998-06-09  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_delete_revs): If we are trying to delete all
	revisions, give an error rather than assertion failed.
	* sanity.sh (basicb): New tests basicb-o* test for this.

1998-06-04  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add): Only send "Directory" requests if we need to.

1998-06-02  Assar Westerlund  <assar@sics.se>

	* client.c: Check for HAVE_GSS_C_NT_HOSTBASED_SERVICE rather than
	assuming that GSS_C_NT_HOSTBASED_SERVICE is a macro.
	* server.c: Likewise.

1998-06-02  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* fileattr.c (fileattr_read): Check for NULL return from strchr.
	* sanity.sh (devcom3): New test devcom3-10 checks for this.

1998-06-01  Assar Westerlund  <assar@sics.se>
	and Ian Lance Taylor  <ian@cygnus.com>

	* client.c: If HAVE_GSSAPI_H, include <gssapi.h>.  Only include
	<gssapi/gssapi.h> if HAVE_GSSAPI_GSSAPI_H.  Only include
	<gssapi/gssapi_generic.h> if HAVE_GSSAPI_GSSAPI_GENERIC_H.
	(GSS_C_NT_HOSTBASED_SERVICE): Define if not defined.
	(connect_to_gserver): Use GSS_C_NT_HOSTBASED_SERVICE instead of
	gss_nt_service_name.
	* server.c: Same header file changes.
	(GSS_C_NT_HOSTBASED_SERVICE): Define if not defined.
	(gserver_authenticate_connection): Use GSS_C_NT_HOSTBASED_SERVICE
	instead of gss_nt_service_name.

1998-06-01  Jim Meyering  <meyering@ascend.com>

	* sanity.sh (tag8k): Add a test for the 1998-05-02 rcs.c bug fix.

1998-05-26  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (annotate): Call tag_check_valid like the other functions
	which have a -r option.
	* sanity.sh (ann): New test ann-14 tests for this.

1998-05-24  Jim Kingdon  <kingdon@harvey.cyclic.com>
